# AUBO_robot

aubo_demo/: CMakeLists.txt  package.xml
aubo_demo/src/: back.cpp  down.cpp  feed.cpp  left.cpp  reset.cpp  right.cpp  rotate.cpp  start.cpp  stop.cpp  test1.cpp  up.cpp
aubo_description/config/: aubo_i5.rviz
aubo_description/launch/: display.launch
aubo_description/meshes/: ring.STL  ring2.STL
aubo_description/meshes/aubo_i5l/: joystick.STL  joystick4.STL  plat_last.STL
aubo_description/urdf/: aubo_i5_robot.urdf.xacro  aubo_i5l.urdf.xacro  aubo_i5l_myrobot.urdf .xacro  aubo_i5l_robot.urdf.xacro
aubo_i5_moveit_config/launch/: ompl_planning_pipeline.launch.xml
aubo_i5l0_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aubo_i5l0_moveit_config/config/: aubo_i5L.srdf  kinematics.yaml  ros_controllers.yaml
aubo_i5l0_moveit_config/launch/: aubo_i5L_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
